# Proxy-Server

./: CODEOWNERS  Cargo.toml  README.md  config.yml
.github/workflows/: build_test.yml
src/: lib.rs  main.rs
src/configuration/: mod.rs  parser.rs  server.rs
src/controller/: crud_controller.rs  mod.rs  rocket_controller.rs
src/model/: proxy_server.rs
